--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="jquery-ui.js"></script>
+<script type="text/javascript" src="jquery.ui.touch-punch.min.js"></script>
 <script src="main.js"></script>
 
 </html>
