--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
 <body>
     <div class="gameBox">
+        <div class="level">Lvl. <span>0</span></div>
         <div class="timeScore">0</div>
+        <div class="levelUp">Level UP!<br> Tap to continue.</div>
+        <div class="gameOver">Game over.<br> Tap to try again.</div>
         <!-- <div class="platform"></div> -->
         <div class="airplane">
         </div>
